Fixed problems with web admin when fr-FR culture is used, gave server requests table fixed-width columns to stop them jumping about

--- a/Plugin.WebAdmin/Web/css/webadmin/webadmin.css
+++ b/Plugin.WebAdmin/Web/css/webadmin/webadmin.css
@@ -2,6 +2,10 @@
 .page-header {
     margin-top: 0;
 }
+
+.thin-column {
+    width: 1px;
+}
 /*endregion */
 
 /*region Sidebar */
